[gd_scene load_steps=7 format=3 uid="uid://c4b282ks3fxoo"]

[ext_resource type="Script" uid="uid://ctukfcds1il8c" path="res://src/MainMenu/MainMenu.gd" id="1_26kxw"]
[ext_resource type="FontFile" uid="uid://un6ffojejhge" path="res://Assets/Kenney Space.ttf" id="2_pct73"]
[ext_resource type="Texture2D" uid="uid://bwatf8mlon43b" path="res://Assets/Images/bg.jpg" id="2_pruii"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ych1x"]
load_path = "res://.godot/imported/button_rectangle_depth_gloss.png-e56682fe5d637cc0ac53e3c40090e515.s3tc.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2o8ya"]
load_path = "res://.godot/imported/button_rectangle_border.png-73a19164b41e27cb2f40c26bfa8cf0c9.s3tc.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_tq1yf"]
load_path = "res://.godot/imported/button_rectangle_depth_flat.png-9aa3ed7b906c9a2b70e04cfcfb845c66.s3tc.ctex"

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_26kxw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_pruii")

[node name="Title" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 281.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_pct73")
theme_override_font_sizes/font_size = 144
text = "TETRIS
"
horizontal_alignment = 1

[node name="VersionText" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -336.0
offset_bottom = 78.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_pct73")
theme_override_font_sizes/font_size = 48
text = "v.1.0.0.0"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 75

[node name="Play" type="TextureButton" parent="CanvasLayer/Control/Buttons"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
focus_mode = 0
texture_normal = SubResource("CompressedTexture2D_ych1x")
texture_pressed = SubResource("CompressedTexture2D_2o8ya")
texture_hover = SubResource("CompressedTexture2D_tq1yf")

[node name="Label" type="Label" parent="CanvasLayer/Control/Buttons/Play"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_pct73")
theme_override_font_sizes/font_size = 64
text = "PLAY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="TextureButton" parent="CanvasLayer/Control/Buttons"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
focus_mode = 0
texture_normal = SubResource("CompressedTexture2D_ych1x")
texture_pressed = SubResource("CompressedTexture2D_2o8ya")
texture_hover = SubResource("CompressedTexture2D_tq1yf")

[node name="Label" type="Label" parent="CanvasLayer/Control/Buttons/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_pct73")
theme_override_font_sizes/font_size = 48
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="TextureButton" parent="CanvasLayer/Control/Buttons"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
focus_mode = 0
texture_normal = SubResource("CompressedTexture2D_ych1x")
texture_pressed = SubResource("CompressedTexture2D_2o8ya")
texture_hover = SubResource("CompressedTexture2D_tq1yf")

[node name="Label" type="Label" parent="CanvasLayer/Control/Buttons/Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_pct73")
theme_override_font_sizes/font_size = 56
text = "HELP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="TextureButton" parent="CanvasLayer/Control/Buttons"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
focus_mode = 0
texture_normal = SubResource("CompressedTexture2D_ych1x")
texture_pressed = SubResource("CompressedTexture2D_2o8ya")
texture_hover = SubResource("CompressedTexture2D_tq1yf")

[node name="Label" type="Label" parent="CanvasLayer/Control/Buttons/Exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_pct73")
theme_override_font_sizes/font_size = 64
text = "EXIT"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/Control/Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Buttons/Exit" to="." method="_on_exit_pressed"]
